--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,12 @@
-# Prerequisites
-*.d
+atcoder/
+doc/
+data/
+out/
+tools/.idea/
+tools/deprecated/
+unfin/
+template/unfin/
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+temp*
 
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
 *.exe
-*.out
-*.app
