--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,5 +35,5 @@
         "${env:GCC_PATH}/include/c++/**": "cpp"
     },
     "C_Cpp.default.intelliSenseMode": "windows-gcc-x64",
-    "python.formatting.provider": "yapf"
+    "python.formatting.provider": "autopep8"
 }
