--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,7 +32,9 @@
     ],
     "files.associations": {
         "*.cpp": "cpp",
-        "**/include/c++/**": "cpp"
+        "*.m": "matlab",
+        "**/include/c++/**": "cpp",
+        "**/tools/lib-cpp/**": "cpp"
     },
     "C_Cpp.default.intelliSenseMode": "windows-gcc-x64",
     "python.formatting.provider": "autopep8"
