feat: CPPDBG_PATH

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,12 +13,17 @@
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
-            "miDebuggerPath": "${env:CPPBIN_PATH}/gdb.exe",
+            "miDebuggerPath": "${env:CPPDBG_PATH}\\gdb.exe",
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
                     "text": "-enable-pretty-printing",
-                    "ignoreFailures": false
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set disassembly-flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
                 }
             ],
             "logging": {
