--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,5 +31,6 @@
         "**/tools/lib-cpp/**": "cpp"
     },
     "C_Cpp.default.intelliSenseMode": "windows-gcc-x64",
-    "python.formatting.provider": "autopep8"
+    "python.formatting.provider": "autopep8",
+    "C_Cpp.errorSquiggles": "Enabled"
 }
