--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,11 @@
     "files.trimTrailingWhitespace": true,
     "[markdown]": {
         "editor.wordWrap": "on",
-        "editor.quickSuggestions": true
+        "editor.quickSuggestions": {
+            "comments": "on",
+            "strings": "on",
+            "other": "on"
+        }
     },
     "files.exclude": {
         "**/.classpath": true,
