--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,8 @@
         "*.hpp": "cpp",
         "**/include/c++/**": "cpp",
         "${workspaceFolder}/lib/**": "cpp"
-    }
+    },
+    "clangd.arguments": [
+        "--header-insertion=never"
+    ]
 }
