--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/tifa-lib"]
 	path = lib/tifa-lib
 	url = git@github.com:Tiphereth-A/CP-lib.git
+[submodule "lib/magic-cpp"]
+	path = lib/magic-cpp
+	url = git@github.com:16bit-ykiko/magic-cpp.git
