--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,6 +16,7 @@
                 "-Ilib/testlib",
                 "-Ilib/dbg-macro",
                 "-Ilib/ac-library",
+                "-Ilib/magic-cpp/include",
                 "-std=gnu++20"
             ],
             "options": {
